src/components/Header/Header.scss
@import '../../variables.scss';

.app__header {
  position: absolute;
  top: 5px;
  left: 5px;
  right: 5px;
  padding: 8px;
  .header__heading {
    color: $highlightColor;
    font-family: Montserrat, Arial, sans-serif;
    letter-spacing: 0px;
  }
  .heading__img {
    position: absolute;
    top: 8px;
    right: 8px;
  }
  @media screen and (max-width: 624px) {
    .heading__img {
      display: none;
    }
  }

  /* For all tabs */
  .nav-link {
    border: 2px solid white;
    border-top-left-radius: .5rem;
    border-top-right-radius: .5rem;
  }

  /* For non-active tabs */
  a.nav-link {
    color: dimgray;
    background-color: #e9ecef;
  }

  /* For active tabs */
  a.active.nav-link {
    color: white;
    font-weight: bold;
    background-color: #42738D;
  }
}

